// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`complex example 1`] = `
Object {
  "fields": Array [
    Object {
      "maxLen": 2,
      "minLen": 2,
      "name": "k1",
      "notNull": true,
      "type": "STRING",
    },
    Object {
      "maxLen": 2,
      "minLen": 2,
      "name": "k3",
      "type": "STRING",
    },
    Object {
      "maxLen": 42.123,
      "minLen": -45.123,
      "name": "k4",
      "notNull": true,
      "type": "FLOAT",
    },
    Object {
      "maxLen": 45,
      "minLen": 45,
      "name": "k5",
      "notNull": true,
      "type": "INT",
    },
    Object {
      "name": "k6",
      "notNull": true,
      "type": "BOOLEAN",
    },
    Object {
      "name": "k7",
      "type": "LOCAL_DATE",
    },
    Object {
      "maxLen": 15224232342,
      "minLen": 15224232342,
      "name": "k8",
      "notNull": true,
      "type": "INT",
    },
    Object {
      "arrayOf": Object {
        "name": "",
        "type": "NULL",
      },
      "name": "k9",
      "notNull": true,
      "type": "ARRAY",
    },
    Object {
      "arrayOf": Object {
        "maxLen": 1,
        "minLen": 1,
        "name": "",
        "type": "STRING",
      },
      "name": "k10",
      "type": "ARRAY",
    },
    Object {
      "arrayOf": Object {
        "maxLen": 1,
        "minLen": 1,
        "name": "",
        "type": "STRING",
      },
      "name": "k11",
      "notNull": true,
      "type": "ARRAY",
    },
    Object {
      "arrayOf": Object {
        "maxLen": 1,
        "minLen": 1,
        "name": "",
        "type": "STRING",
      },
      "name": "k12",
      "type": "ARRAY",
    },
    Object {
      "name": "k20",
      "notNull": true,
      "objectFields": Array [
        Object {
          "maxLen": 37,
          "minLen": 37,
          "name": "b",
          "type": "INT",
        },
      ],
      "type": "OBJECT",
    },
  ],
  "table": "TEST_TABLE",
}
`;

exports[`getTestItemSchema 1`] = `
Object {
  "fields": Array [
    Object {
      "maxLen": 3,
      "minLen": 3,
      "name": "id",
      "notNull": true,
      "type": "STRING",
    },
    Object {
      "maxLen": 2,
      "minLen": 2,
      "name": "k1",
      "notNull": true,
      "type": "STRING",
    },
    Object {
      "maxLen": 2,
      "minLen": 2,
      "name": "k2",
      "notNull": true,
      "type": "STRING",
    },
    Object {
      "maxLen": 1,
      "minLen": 1,
      "name": "k3",
      "notNull": true,
      "type": "INT",
    },
    Object {
      "name": "even",
      "notNull": true,
      "type": "BOOLEAN",
    },
    Object {
      "maxLen": 1529539200,
      "minLen": 1529539200,
      "name": "created",
      "notNull": true,
      "type": "INT",
    },
    Object {
      "maxLen": 1529539200,
      "minLen": 1529539200,
      "name": "updated",
      "notNull": true,
      "type": "INT",
    },
  ],
  "table": "TEST_TABLE",
}
`;

exports[`testItems 1`] = `
Object {
  "fields": Array [
    Object {
      "maxLen": 3,
      "minLen": 3,
      "name": "id",
      "notNull": true,
      "type": "STRING",
    },
    Object {
      "maxLen": 2,
      "minLen": 2,
      "name": "k1",
      "notNull": true,
      "type": "STRING",
    },
    Object {
      "maxLen": 3,
      "minLen": 2,
      "name": "k2",
      "notNull": true,
      "type": "STRING",
    },
    Object {
      "maxLen": 5,
      "minLen": 1,
      "name": "k3",
      "notNull": true,
      "type": "INT",
    },
    Object {
      "name": "even",
      "notNull": true,
      "type": "BOOLEAN",
    },
    Object {
      "maxLen": 1529539200,
      "minLen": 1529539200,
      "name": "created",
      "notNull": true,
      "type": "INT",
    },
    Object {
      "maxLen": 1529539200,
      "minLen": 1529539200,
      "name": "updated",
      "notNull": true,
      "type": "INT",
    },
  ],
  "table": "TEST_TABLE",
}
`;
